# concurrent-homework

./: README.md
homework/: README.md  pom.xml
homework/docs/: Concurrent - Homework.docx
homework/src/main/java/com/alternate/concurrenthomework/question1/: Main.java
homework/src/main/java/com/alternate/concurrenthomework/question1/domain/: PizzaDelivery.java  Satisfactions.java  Student.java
homework/src/main/java/com/alternate/concurrenthomework/question2/: Main.java
homework/src/main/java/com/alternate/concurrenthomework/question2/domain/: Satisfactions.java  TicketIssuer.java
homework/src/main/java/com/alternate/concurrenthomework/question3/: Main.java
homework/src/main/java/com/alternate/concurrenthomework/question3/domain/: CurryMaker.java  FoodMaker.java  Shop.java
lab1(linked-list)/: .gitignore  CMakeLists.txt  README.md  README.txt  linked_list.h  one_mutex.c  serial.c
lab1(linked-list)/src/: read_write_lock.c  sequential.c
lab2(senate-bus-problem)/: .gitignore  README.md  pom.xml
lab2(senate-bus-problem)/src/main/java/com/concurrent/senatebusproblem/: Main.java
lab2(senate-bus-problem)/src/main/java/com/concurrent/senatebusproblem/constants/: ColorCodes.java
lab2(senate-bus-problem)/src/main/java/com/concurrent/senatebusproblem/domain/: Bus.java  BusDispatcher.java  BusHalt.java  Rider.java  RiderDispatcher.java
lab3(matrix-multiplication)/: .gitignore  CMakeLists.txt  README.md  matrix.cpp  optimized.cpp  optimized_2.cpp  parallel.cpp  sequential.cpp  util.h
lab3(matrix-multiplication)/src/: matrix.h  util.cpp
